[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/mesh/masonry/wall_top/wall_top.tres" type="PlaneMesh" id=1]
[ext_resource path="res://addons/RoomTool/RoomConnector.gd" type="Script" id=2]
[ext_resource path="res://addons/RoomTool/Editor/Edits/RoomWallEdit.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.005 )

[node name="RoomConnector" type="Spatial"]
script = ExtResource( 2 )

[node name="Top" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
mesh = ExtResource( 1 )
material/0 = null

[node name="Buttom" type="MeshInstance" parent="."]
transform = Transform( -1, -3.25841e-07, 0, 3.25841e-07, -1, 0, 0, 0, 1, 0, 2, 0 )
mesh = ExtResource( 1 )
material/0 = null

[node name="WallA" type="StaticBody" parent="." groups=[
"WallEdit",
]]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.5, 2, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="WallA"]
transform = Transform( 1, 0, 0, 0, 0.333, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="WallA"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="WallB" type="StaticBody" parent="." groups=[
"WallEdit",
]]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 2, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="WallB"]
transform = Transform( 1, 0, 0, 0, 0.333, 0, 0, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="WallB"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )
